Initial commit: Socioztron Social Media Platform

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "social-media-socioztron",
+  "name": "social-media-socialzone",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
